--- a/app/index.html
+++ b/app/index.html
@@ -192,63 +192,64 @@
 				<h2 class="text-white fs48 font-weight-bold">Наши <span class="text-orange fs48 font-weight-bold">тарифы</span></h2>
 			</div>
 			<div class="rate-block d-flex justify-content-between align-items-center mt-4">
-				<div class="rate-tabs-section">
-					<div class="rate-tabs bg-white">
-						<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Эконом</h3>
-						<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Автомобили Эконом класса</p>
-						<p class="text-dark text-center fs18 mb-0 mt-4">50р посадка</p>
-						<p class="text-dark text-center fs18 mb-0">45р километр</p>
-						<p class="text-dark text-center fs18">25р минута пути</p>
-						<hr class="mx-4 mb-1">
-						<p class="text-dark text-center fs36 font-weight-bold pb-4"> от 50Р </p>
+				<div class="row">
+					<div class="rate-tabs-section col-lg-3">
+						<div class="rate-tabs bg-white">
+							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Эконом</h3>
+							<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Автомобили Эконом класса</p>
+							<p class="text-dark text-center fs18 mb-0 mt-4">50р посадка</p>
+							<p class="text-dark text-center fs18 mb-0">45р километр</p>
+							<p class="text-dark text-center fs18">25р минута пути</p>
+							<hr class="mx-4 mb-1">
+							<p class="text-dark text-center fs36 font-weight-bold pb-4"> от 50Р </p>
+						</div>
+						<div class="rate-button">
+							<button class="btn btn-orange mt-3">Заказать</button>
+						</div>
 					</div>
-					<div class="rate-button">
-						<button class="btn btn-orange mt-3">Заказать</button>
+					<div class="rate-tabs-section col-lg-3">
+						<div class="rate-tabs bg-white">
+							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Комфорт</h3>
+							<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Автомобили Комфорт класса</p>
+							<p class="text-dark text-center fs18 mb-0 mt-4">89р посадка</p>
+							<p class="text-dark text-center fs18 mb-0">60р километр</p>
+							<p class="text-dark text-center fs18">40р минута пути</p>
+							<hr class="mx-4 mb-1">
+							<p class="text-dark text-center fs36 font-weight-bold pb-4">от 89Р</p>
+						</div>
+						<div class="rate-button">
+							<button class="btn btn-orange mt-3">Заказать</button>
+						</div>
+					</div>
+					<div class="rate-tabs-section col-lg-3">
+						<div class="rate-tabs bg-white">
+							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Бизнес</h3>
+							<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Автомобили Бизнес класса</p>
+							<p class="text-dark text-center fs18 mb-0 mt-4">199р посадка</p>
+							<p class="text-dark text-center fs18 mb-0">70р километр</p>
+							<p class="text-dark text-center fs18">50р минута пути</p>
+							<hr class="mx-4 mb-1">
+							<p class="text-dark text-center fs36 font-weight-bold pb-4"> от 50Р </p>
+						</div>
+						<div class="rate-button">
+							<button class="btn btn-orange mt-3">Заказать</button>
+						</div>
+					</div>
+					<div class="rate-tabs-section col-lg-3">
+						<div class="rate-tabs bg-white">
+							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Трезвый водитель</h3>
+							<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Заберём из любой точки</p>
+							<p class="text-dark text-center fs18 mb-0 mt-4">500р посадка</p>
+							<p class="text-dark text-center fs18 mb-0">90р километр</p>
+							<p class="text-dark text-center fs18">90р минута пути</p>
+							<hr class="mx-4 mb-1">
+							<p class="text-dark text-center fs36 font-weight-bold pb-4"> от 500Р </p>
+						</div>
+						<div class="rate-button">
+							<button class="btn btn-orange mt-3">Заказать</button>
+						</div>
 					</div>
 				</div>
-				<div class="rate-tabs-section">
-					<div class="rate-tabs bg-white">
-						<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Комфорт</h3>
-						<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Автомобили Комфорт класса</p>
-						<p class="text-dark text-center fs18 mb-0 mt-4">89р посадка</p>
-						<p class="text-dark text-center fs18 mb-0">60р километр</p>
-						<p class="text-dark text-center fs18">40р минута пути</p>
-						<hr class="mx-4 mb-1">
-						<p class="text-dark text-center fs36 font-weight-bold pb-4">от 89Р</p>
-					</div>
-					<div class="rate-button">
-						<button class="btn btn-orange mt-3">Заказать</button>
-					</div>
-				</div>
-				<div class="rate-tabs-section">
-					<div class="rate-tabs bg-white">
-						<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Бизнес</h3>
-						<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Автомобили Бизнес класса</p>
-						<p class="text-dark text-center fs18 mb-0 mt-4">199р посадка</p>
-						<p class="text-dark text-center fs18 mb-0">70р километр</p>
-						<p class="text-dark text-center fs18">50р минута пути</p>
-						<hr class="mx-4 mb-1">
-						<p class="text-dark text-center fs36 font-weight-bold pb-4"> от 50Р </p>
-					</div>
-					<div class="rate-button">
-						<button class="btn btn-orange mt-3">Заказать</button>
-					</div>
-				</div>
-				<div class="rate-tabs-section">
-					<div class="rate-tabs bg-white">
-						<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Трезвый водитель</h3>
-						<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-5">Заберём из любой точки</p>
-						<p class="text-dark text-center fs18 mb-0 mt-4">500р посадка</p>
-						<p class="text-dark text-center fs18 mb-0">90р километр</p>
-						<p class="text-dark text-center fs18">90р минута пути</p>
-						<hr class="mx-4 mb-1">
-						<p class="text-dark text-center fs36 font-weight-bold pb-4"> от 500Р </p>
-					</div>
-					<div class="rate-button">
-						<button class="btn btn-orange mt-3">Заказать</button>
-					</div>
-				</div>
-
 			</div>
 		</div>
 	</section>
@@ -261,8 +262,8 @@
 			</div>
 			<div class="first-content d-flex justify-content-center align-items-center">
 				<div class="first-content-text">
-					<h3 class="text-dark text-left fs24 font-weight-normal"> Мы занимаемся перевозками пассажиров с 1997 года! Все наши водители - местные и прекрасно знают город.
-						<p></p><p>Поездка с нами - это прежде всего Ваша безопасность и комфорт.</p></h3>
+					<p class="text-dark text-left fs24 font-weight-normal lh1">Мы занимаемся перевозками пассажиров с 1997 года! Все наши водители - местные и прекрасно знают город.
+						<br> <br>Поездка с нами - это прежде всего Ваша безопасность и комфорт.</p>
 				</div>
 				<div class="first-content-photo ">
 					<img src="img/dest/first-content-img.png" alt="">
