--- a/app/services.html
+++ b/app/services.html
@@ -15,66 +15,71 @@
 <div class="page">
     <!-- Шапка. Начало. -->
     <header>
-        <div class="container d-flex justify-content-between align-items-center">
-            <!-- Логотип -->
-            <div class="img-box">
-                <img class="logo img-fluid" src="img/dest/logo.png" alt="Огни Нижнего">
-            </div>
-            <!-- Ссылки(ПК) -->
-            <ul class="links list-unstyled d-flex">
-                <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
-                <li class="links-topmenu position-relative">
-                    <a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a>
-                    <ul class="links-submenu list-unstyled mt-3 d-none position-absolute bg-white border p-3">
-                        <li><a href="#">Такси для гостей города</a></li>
-                        <li><a href="#">Такси области и РФ</a></li>
-                        <li><a href="#">Такси для нижегородцев</a></li>
-                        <li><a href="#">Трезвый водитель</a></li>
-                    </ul>
-                </li>
-                <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
-            </ul>
-            <!-- Телефон -->
-            <div class="phone d-flex flex-column align-items-end lh1">
-                <a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
-                <p class="mb-0 fs18">по Новгороду и области</p>
+        <div class="container">
+            <div class="row d-flex justify-content-between align-items-center">
+                <!-- Логотип -->
+                <div class="img-box col-4">
+                    <img class="logo img-fluid" src="img/dest/logo.png" alt="Огни Нижнего">
+                </div>
+                <!-- Ссылки(ПК) -->
+                <ul class="links list-unstyled d-none d-lg-flex">
+                    <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
+                    <li class="links-topmenu position-relative">
+                        <a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a>
+                        <ul class="links-submenu list-unstyled mt-3 d-none position-absolute bg-white border p-3">
+                            <li><a href="#">Такси для гостей города</a></li>
+                            <li><a href="#">Такси по области и РФ</a></li>
+                            <li><a href="#">Такси для нижегородцев</a></li>
+                            <li><a href="#">Трезвый водитель</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
+                </ul>
+                <!-- Телефон -->
+                <div class="phone d-flex flex-column align-items-center align-items-lg-end col-4">
+                    <a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
+                    <p class="mb-0 fs18 text-center text-lg-right">по Новгороду и области</p>
+                </div>
+                <div class="mobile col-4">
+                    <a href="#my-menu" class="d-flex d-lg-none justify-content-end"><img src="img/burger-icon.svg" alt=""></a>
+                </div>
             </div>
         </div>
     </header>
     <!-- Шапка. Конец. -->
     <!-- Наши услуги. Начало. -->
-    <section class="uslugi py-5">
+    <section class="uslugi pt-5">
         <div class="container">
-            <div class="uslugi-title">
-                <h2 class="text-dark fs48 font-weight-bold ">Наши<span class="text-orange fs48"> услуги</span></h2>
+            <div class="uslugi-title pb-3">
+                <h2 class="text-dark fs48 font-weight-bold text-center text-md-left ">Наши<span class="text-orange fs48"> услуги</span></h2>
             </div>
             <div class="row mt-4">
-                <article class="col-lg-6">
+                <article class="col-lg-6 py-2 py-lg-3">
                     <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-guest.png')">
                         <h1 class="tabs-title text-white fs36">Такси для гостей города</h1>
                         <hr class="border-white my-4">
-                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0 ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
                 </article>
-                <article class="col-lg-6">
+                <article class="col-lg-6 py-2 py-lg-3">
                     <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-nn.png')">
                         <h1 class="tabs-title text-white fs36">Такси для новгородцев</h1>
                         <hr class="border-white my-4">
-                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0 ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
                 </article>
-                <article class="col-lg-6 mt-4">
+                <article class="col-lg-6 py-2 py-lg-3">
                     <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-rus.png')">
                         <h1 class="tabs-title text-white fs36">Такси по области и РФ</h1>
                         <hr class="border-white my-4">
-                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0 ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
                 </article>
-                <article class="col-lg-6 mt-4">
+                <article class="col-lg-6 py-2 py-lg-3">
                     <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-sober.png')">
                         <h1 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h1>
                         <hr class="border-white my-4">
-                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0 ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
                 </article>
             </div>
@@ -82,27 +87,27 @@
     </section>
     <!-- Наши услуги. конец. -->
     <!-- Связаться с нами. Начало -->
-    <section class="contact-us ">
+    <section class="contact-us pt-5">
         <div class="container">
-            <div class="contact-title py-5">
-                <h2 class="text-dark fs48 font-weight-bold">Связаться<span class="text-orange fs48 font-weight-bold"> с нами</span></h2>
+            <div class="contact-title pb-5">
+                <h2 class="text-dark fs48 font-weight-bold text-center text-md-left">Связаться<span class="text-orange fs48 font-weight-bold"> с нами</span></h2>
             </div>
         </div>
-        <div class="contact-form py-5">
+        <div class="contact-form pt-5">
             <div class="container">
                 <div class="contact-form-title">
-                    <h3 class="text-white text-left fs24 font-weight-bold">Мы ответим на все ваши вопросы!</h3>
-                    <div class="contact-form-fields d-flex justify-content-between align-items-center mt-4">
-                        <div class="contact-name-tel">
-                            <input type="text" class="nt-input mb-1" placeholder="Ваше имя">
-                            <input type="text" class="nt-input mt-4" placeholder="+7(911) 123-45-65">
+                    <h3 class="text-white text-left fs24 font-weight-bold text-center text-md-left pb-4">Мы ответим на все ваши вопросы!</h3>
+                    <div class="contact-form-fields row py-4 d-inline d-md-flex flex-lg-nowrap justify-content-between">
+                        <div class="contact-name-tel col-12 col-lg-5">
+                            <input type="text" class="nt-input py-4 w-100" placeholder="Ваше имя">
+                            <input type="text" class="nt-input py-4 w-100 mt-4" placeholder="+7(911) 123-45-65">
                         </div>
-                        <div class="contact-comment d-flex">
-                            <textarea name="" id="" cols="30" rows="5" placeholder="Ваш вопрос"></textarea>
+                        <div class="contact-comment mt-4 mt-lg-0 col-12 col-lg-4">
+                            <textarea class="w-100" name="" id="" cols="auto" rows="5" placeholder="Ваш вопрос"></textarea>
                         </div>
-                        <div class="contact-button">
-                            <button class="btn btn-orange">Заказать</button>
-                            <h4 class="contact-button-policity fs13 text-white font-weight-normal">«Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь c политикой конфиденциальности»</h4>
+                        <div class="contact-button col-12 col-lg-3">
+                            <button class="btn btn-orange py-4 w-100 mt-4 mt-lg-0">Заказать</button>
+                            <h4 class="contact-button-policity fs13 text-white font-weight-normal mt-2 text-center text-md-left">«Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь c политикой конфиденциальности»</h4>
                         </div>
                     </div>
                 </div>
@@ -113,44 +118,60 @@
     <!-- Подвал. Начало. -->
     <footer>
         <div class="container">
-            <div class="footer-info d-flex justify-content-between">
-                <div class="footer-logo">
+            <div class="row footer-info d-flex justify-content-between">
+                <div class="footer-logo d-flex col-12 col-md-6 col-lg-3 justify-content-center align-items-center order-lg-0">
                     <img class="logo mt-0 img-fluid" src="img/dest/logo.png" alt="Огни Нижнего">
                 </div>
-                <div class="footer-contact mt-3 d-inline">
+                <div class="footer-contact mt-md-3 d-md-inline d-flex flex-column col-12 col-md-6 col-lg-3 justify-content-center align-items-center  py-3 py-lg-0 order-1 order-lg-0" >
                     <div class="footer-contact-links">
-                        <a href="#" class="text-orange fs24 font-weight-bold">413-76-37</a>
+                        <a href="#" class="text-orange fs24 font-weight-bold ml-2">413-76-37</a>
                     </div>
                     <div class="footer-contact-links">
-                        <a href="#" class="text-orange fs24 font-weight-bold">example@gmail.com</a>
+                        <a href="#" class="text-orange fs24 font-weight-bold ml-2">example@gmail.com</a>
                     </div>
                 </div>
-                <div class="div footer-links mt-3">
-                    <ul class="list-unstyled">
-                        <li><a href="" class="text-white fs18 font-weight-bold">Услуги</a></li>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Такси для гостей города</a></li>
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Такси для Нижегородцев</a></li>
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Такси по области и РФ</a></li>
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Трезсвый водитель</a></li>
-                        </ul>
+                <div class="footer-links mt-3 d-flex col-12 col-md-6 col-lg-3 justify-content-center order-lg-0 py-3 py-lg-0">
+                    <ul class="list-unstyled  d-flex flex-column align-items-center align-items-md-start">
+                        <li class="d-flex flex-column align-items-center align-items-md-start"><a href="" class="text-white fs18 font-weight-bold">Услуги</a>
+                            <ul class="list-unstyled d-flex flex-column align-items-center align-items-md-start">
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Такси для гостей города</a></li>
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Такси для Нижегородцев</a></li>
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Такси по области и РФ</a></li>
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Трезсвый водитель</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
-                <div class="footer-social mt-3">
+                <div class="footer-social mt-md-3 d-flex col-12 col-md-6 col-lg-3 align-self-start justify-content-center order-1 py-3 py-lg-0 order-lg-0">
                     <img src="img/vk-footer-icon.svg" alt="">
                     <img src="img/inst-footer-icon.svg" alt="">
                     <img src="img/fb-footer-icon.svg" alt="">
                 </div>
             </div>
             <div class="footer-copyright d-flex justify-content-between align-items-center">
-                <h3 class="text-white fs18 font-weight-normal my-3">2020|Все права защищены</h3>
-                <h3 class="text-white fs18 font-weight-normal my-3"><a href="#" class="text-white text-decoration-none">Политика конфиденциальности</a></h3>
+                <p class="text-white fs18 font-weight-normal my-3">2020|Все права защищены</p>
+                <p class="text-white fs18 font-weight-normal my-3"><a href="#" class="text-white text-decoration-none">Политика конфиденциальности</a></p>
             </div>
         </div>
     </footer>
     <!-- Подвал. Конец. -->
 </div>
-
+<!--Мобильная навигация. Начало-->
+<nav id="my-menu">
+    <ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Услуги</a>
+            <ul>
+                <li><a href="#">Такси для гостей города</a></li>
+                <li><a href="#">Такси по области и РФ</a></li>
+                <li><a href="#">Такси для нижегородцев</a></li>
+                <li><a href="#">Трезвый водитель</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Контакты</a></li>
+    </ul>
+</nav>
+<!--Мобильная навигация. Конец-->
 <script src="js/app.min.js"></script>
 </body>
 </html>
