--- a/app/sober-driver.html
+++ b/app/sober-driver.html
@@ -15,29 +15,34 @@
 <div class="page">
     <!-- Шапка. Начало. -->
     <header>
-        <div class="container d-flex justify-content-between align-items-center">
-            <!-- Логотип -->
-            <div class="img-box">
-                <img class="logo img-fluid" src="img/dest/logo.png" alt="Огни Нижнего">
-            </div>
-            <!-- Ссылки(ПК) -->
-            <ul class="links list-unstyled d-flex">
-                <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
-                <li class="links-topmenu position-relative">
-                    <a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a>
-                    <ul class="links-submenu list-unstyled mt-3 d-none position-absolute bg-white border p-3">
-                        <li><a href="#">Такси для гостей города</a></li>
-                        <li><a href="#">Такси области и РФ</a></li>
-                        <li><a href="#">Такси для нижегородцев</a></li>
-                        <li><a href="#">Трезвый водитель</a></li>
-                    </ul>
-                </li>
-                <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
-            </ul>
-            <!-- Телефон -->
-            <div class="phone d-flex flex-column align-items-end lh1">
-                <a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
-                <p class="mb-0 fs18">по Новгороду и области</p>
+        <div class="container">
+            <div class="row d-flex justify-content-between align-items-center">
+                <!-- Логотип -->
+                <div class="img-box col-4">
+                    <img class="logo img-fluid" src="img/dest/logo.png" alt="Огни Нижнего">
+                </div>
+                <!-- Ссылки(ПК) -->
+                <ul class="links list-unstyled d-none d-lg-flex">
+                    <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
+                    <li class="links-topmenu position-relative">
+                        <a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a>
+                        <ul class="links-submenu list-unstyled mt-3 d-none position-absolute bg-white border p-3">
+                            <li><a href="#">Такси для гостей города</a></li>
+                            <li><a href="#">Такси по области и РФ</a></li>
+                            <li><a href="#">Такси для нижегородцев</a></li>
+                            <li><a href="#">Трезвый водитель</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
+                </ul>
+                <!-- Телефон -->
+                <div class="phone d-flex flex-column align-items-center align-items-lg-end col-4">
+                    <a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
+                    <p class="mb-0 fs18 text-center text-lg-right">по Новгороду и области</p>
+                </div>
+                <div class="mobile col-4">
+                    <a href="#my-menu" class="d-flex d-lg-none justify-content-end"><img src="img/burger-icon.svg" alt=""></a>
+                </div>
             </div>
         </div>
     </header>
@@ -46,55 +51,46 @@
     <section class="sober-driver py-5">
         <div class="container">
             <div class="gt-title">
-                <h2 class="text-white fs36 font-weight-bold">Трезвый <span class="text-orange">водитель</span></h2>
-                <p class="text-white fs16 font-weight-normal lh1 mt-2">Мы пришлем Вам опытного водителя, который доставит
+                <h2 class="text-white fs36 font-weight-bold text-center text-lg-left">Трезвый <span class="text-orange">водитель</span></h2>
+                <p class="text-white fs16 font-weight-normal text-center text-lg-left my-2 my-lg-0 mt-lg-2">Мы пришлем Вам опытного водителя, который доставит
                     <br>Вас и ваше авто домой после дружеской встречи в баре или праздничного застолья!</p>
             </div>
-            <div class="sober-content d-flex justify-content-between">
-                <div class="sober-left">
-                    <div class="gt-rate">
-                        <div class="gt-rate-block d-flex justify-content-start align-items-center">
-                            <div class="gt-rate-tabs">
-                                <div class="rate-tabs bg-white m-0">
-                                    <h3 class="rate-title text-dark text-center fs24 pt-4">Трезвый водитель</h3>
-                                    <p class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2 pb-2">Заберем из любой точки</p>
-                                    <p class="text-dark text-center fs18 mb-0 mt-4">500р посадка</p>
-                                    <p class="text-dark text-center fs18 mb-0">90р километр</p>
-                                    <p class="text-dark text-center fs18 mb-4">90р минута пути</p>
-                                    <hr class="mx-2">
-                                    <p class="text-dark text-center fs36 font-weight-bold"> от 500Р </p>
-                                </div>
+            <div class="sober-content row d-flex justify-content-between align-items-center">
+                <div class="sober-left col-lg-4">
+                    <div class="gt-rate-block ">
+                        <div class="gt-rate-tabs pt-3">
+                            <div class="rate-tabs bg-white">
+                                <h3 class="rate-title text-dark text-center fs24 pt-4">Трезвый водитель</h3>
+                                <p class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2 pb-2">Заберём из любой точки</p>
+                                <p class="text-dark text-center fs18 mb-0 mt-3">500р посадка</p>
+                                <p class="text-dark text-center fs18 mb-0">90р километр</p>
+                                <p class="text-dark text-center fs18 mb-4">90р минута пути</p>
+                                <hr class="mx-2">
+                                <p class="text-dark text-center fs36 font-weight-bold pb-3"> от 500Р </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="sober-right">
-                    <div class="zakaz-taxi-title mt-4">
-                        <h3 class="text-left fs24 font-weight-bold mx-5">Закажи такси прямо сейчас</h3>
+                <div class="sober-right bg-white col-lg-8">
+                    <div class="zakaz-taxi-title mt-2">
+                        <h3 class="text-left fs24 font-weight-bold pl-2 py-2">Закажи такси прямо сейчас</h3>
                     </div>
-                    <div class="row d-inline">
-                        <div class="d-flex justify-content-between align-items-center mx-5">
-                            <input type="text" placeholder="Откуда" class="zakaz-taxi-form">
-                            <span class="text-dark fs18 justify-content-center align-items-center fs24 font-weight-bold mx-3">-</span>
-                            <input type="text" placeholder="Куда" class="zakaz-taxi-form">
+                    <div class="row d-flex justify-content-between align-items-center ">
+                        <div class="d-inline d-lg-flex align-items-center justify-content-between col-lg-12">
+                            <input type="text" placeholder="Откуда" class="zakaz-taxi-form mt-2 py-4 col-12 col-lg-5 ml-lg-3">
+                            <input type="text" placeholder="Куда" class="zakaz-taxi-form my-4 my-lg-0 mt-lg-2 py-4 col-12 col-lg-5">
+
                         </div>
-                        <div class="d-flex justify-content-between align-items-center mt-4 mx-5">
-                            <input type="text" placeholder="+7(911) 123-45-67" class="zakaz-taxi-form">
-                            <div class="d-flex justify-content-start align-items-center">
-                                <input type="checkbox" class="zakaz-taxi-checkbox mx-3">
-                                <h3 class="checkbox-text fs24 font-weight-bold"> Заказ такси ко времени</h3>
-                            </div>
+                        <div class="d-inline d-lg-flex align-items-center justify-content-between col-lg-12">
+                            <input type="text" placeholder="+7(911) 123-45-67" class="zakaz-taxi-form my-lg-4 py-4 ml-lg-3 col-12 col-lg-5">
+                            <button class="btn btn-orange py-4 w-100 col-12 col-lg-5 my-4">Заказать</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="">
-                <div class="d-flex justify-content-between mt-2">
-                    <h4 class="checkbox-politicy fs13 text-white">«Нажимая на кнопку, вы даете согласие <br>
-                        на обработку персональных данных и соглашаетесь <br>
-                        c политикой конфиденциальности»</h4>
-                    <button class="btn btn-orange">Заказать</button>
-                </div>
+            <div class="row d-flex justify-content-between mt-2">
+                <h4 class="checkbox-politicy text-center fs13 text-white  col-12 py-4">«Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь c политикой конфиденциальности»</h4>
+
             </div>
         </div>
     </section>
@@ -102,43 +98,60 @@
     <!-- Подвал. Начало. -->
     <footer>
         <div class="container">
-            <div class="footer-info d-flex justify-content-between">
-                <div class="footer-logo">
+            <div class="row footer-info d-flex justify-content-between">
+                <div class="footer-logo d-flex col-12 col-md-6 col-lg-3 justify-content-center align-items-center order-lg-0">
                     <img class="logo mt-0 img-fluid" src="img/dest/logo.png" alt="Огни Нижнего">
                 </div>
-                <div class="footer-contact mt-3 d-inline">
+                <div class="footer-contact mt-md-3 d-md-inline d-flex flex-column col-12 col-md-6 col-lg-3 justify-content-center align-items-center  py-3 py-lg-0 order-1 order-lg-0" >
                     <div class="footer-contact-links">
-                        <a href="#" class="text-orange fs24 font-weight-bold">413-76-37</a>
+                        <a href="#" class="text-orange fs24 font-weight-bold ml-2">413-76-37</a>
                     </div>
                     <div class="footer-contact-links">
-                        <a href="#" class="text-orange fs24 font-weight-bold">example@gmail.com</a>
+                        <a href="#" class="text-orange fs24 font-weight-bold ml-2">example@gmail.com</a>
                     </div>
                 </div>
-                <div class="div footer-links mt-3">
-                    <ul class="list-unstyled">
-                        <li><a href="" class="text-white fs18 font-weight-bold">Услуги</a></li>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Такси для гостей города</a></li>
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Такси для Нижегородцев</a></li>
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Такси по области и РФ</a></li>
-                            <li><a href="#" class="text-white fs18 font-weight-normal">Трезсвый водитель</a></li>
-                        </ul>
+                <div class="footer-links mt-3 d-flex col-12 col-md-6 col-lg-3 justify-content-center order-lg-0 py-3 py-lg-0">
+                    <ul class="list-unstyled  d-flex flex-column align-items-center align-items-md-start">
+                        <li class="d-flex flex-column align-items-center align-items-md-start"><a href="" class="text-white fs18 font-weight-bold">Услуги</a>
+                            <ul class="list-unstyled d-flex flex-column align-items-center align-items-md-start">
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Такси для гостей города</a></li>
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Такси для Нижегородцев</a></li>
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Такси по области и РФ</a></li>
+                                <li><a href="#" class="text-white fs18 font-weight-normal">Трезсвый водитель</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
-                <div class="footer-social mt-3">
+                <div class="footer-social mt-md-3 d-flex col-12 col-md-6 col-lg-3 align-self-start justify-content-center order-1 py-3 py-lg-0 order-lg-0">
                     <img src="img/vk-footer-icon.svg" alt="">
                     <img src="img/inst-footer-icon.svg" alt="">
                     <img src="img/fb-footer-icon.svg" alt="">
                 </div>
             </div>
             <div class="footer-copyright d-flex justify-content-between align-items-center">
-                <h3 class="text-white fs18 font-weight-normal my-3">2020|Все права защищены</h3>
-                <h3 class="text-white fs18 font-weight-normal my-3"><a href="#" class="text-white text-decoration-none">Политика конфиденциальности</a></h3>
+                <p class="text-white fs18 font-weight-normal my-3">2020|Все права защищены</p>
+                <p class="text-white fs18 font-weight-normal my-3"><a href="#" class="text-white text-decoration-none">Политика конфиденциальности</a></p>
             </div>
         </div>
     </footer>
     <!-- Подвал. Конец. -->
 </div>
+<!--Мобильная навигация. Начало-->
+<nav id="my-menu">
+    <ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Услуги</a>
+            <ul>
+                <li><a href="#">Такси для гостей города</a></li>
+                <li><a href="#">Такси по области и РФ</a></li>
+                <li><a href="#">Такси для нижегородцев</a></li>
+                <li><a href="#">Трезвый водитель</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Контакты</a></li>
+    </ul>
+</nav>
+<!--Мобильная навигация. Конец-->
 <script src="js/app.min.js"></script>
 </body>
 </html>
