--- a/app/index.html
+++ b/app/index.html
@@ -201,21 +201,21 @@
 				<h2 class="text-white fs48 font-weight-bold text-center text-md-left">Наши <span class="text-orange fs48 font-weight-bold">тарифы</span></h2>
 			</div>
 			<div class="rate-block row d-flex justify-content-between align-items-center mt-4">
-					<div class="rate-tabs-section col-lg-3">
+					<div class="rate-tabs-section col-sm-6 col-lg-3">
 						<div class="rate-tabs bg-white">
 							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Эконом</h3>
-							<p class="rate-subtitle text-dark text-center fs18 mt-2 mb-0 pb-md-4">Автомобили Эконом класса</p>
+							<p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Автомобили Эконом класса</p>
 							<p class="text-dark text-center fs18 mb-0">50р посадка</p>
 							<p class="text-dark text-center fs18 mb-0">45р километр</p>
 							<p class="text-dark text-center fs18 mb-0 pb-3">25р минута пути</p>
 							<hr class="mx-4 my-3">
-							<p class="text-dark text-center fs36 font-weight-bold pb-3"> от 50Р </p>
+							<p class="text-dark text-center fs36 font-weight-bold pb-4 mb-0"> от 50Р </p>
 						</div>
 						<div class="rate-button py-4">
 							<button class="btn btn-orange py-4 w-100">Заказать</button>
 						</div>
 					</div>
-					<div class="rate-tabs-section col-lg-3">
+					<div class="rate-tabs-section col-sm-6 col-lg-3">
 						<div class="rate-tabs bg-white">
 							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Комфорт</h3>
 							<p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Автомобили Комфорт класса</p>
@@ -229,7 +229,7 @@
 							<button class="btn btn-orange py-4 w-100">Заказать</button>
 						</div>
 					</div>
-					<div class="rate-tabs-section col-lg-3">
+					<div class="rate-tabs-section col-sm-6 col-lg-3">
 						<div class="rate-tabs bg-white">
 							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Бизнес</h3>
 							<p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Автомобили Бизнес класса</p>
@@ -243,7 +243,7 @@
 							<button class="btn btn-orange py-4 w-100">Заказать</button>
 						</div>
 					</div>
-					<div class="rate-tabs-section col-lg-3">
+					<div class="rate-tabs-section col-sm-6 col-lg-3">
 						<div class="rate-tabs bg-white">
 							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Трезвый водитель</h3>
 							<p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Заберём из любой точки</p>
