--- a/app/taxi-area.html
+++ b/app/taxi-area.html
@@ -55,7 +55,7 @@
                 <p class="text-white text-center text-lg-left fs16 font-weight-normal mt-2">Мы можем доставить Вас в любую точку <br> Нижегородской области за приятную цену.</p>
             </div>
             <div class="rate-block row d-flex justify-content-center align-items-center mt-5">
-                <div class="rate-tabs-section col-lg-3">
+                <div class="rate-tabs-section col-sm-6 col-lg-3">
                     <div class="rate-tabs bg-white">
                         <h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Эконом</h3>
                         <p class="rate-subtitle text-dark text-center fs18 mt-2 mb-0 pb-md-4">Автомобили Эконом класса</p>
@@ -69,7 +69,7 @@
                         <button class="btn btn-orange py-4 w-100">Заказать</button>
                     </div>
                 </div>
-                <div class="rate-tabs-section col-lg-3">
+                <div class="rate-tabs-section col-sm-6 col-lg-3">
                     <div class="rate-tabs bg-white">
                         <h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Комфорт</h3>
                         <p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Автомобили Комфорт класса</p>
@@ -83,7 +83,7 @@
                         <button class="btn btn-orange py-4 w-100">Заказать</button>
                     </div>
                 </div>
-                <div class="rate-tabs-section col-lg-3">
+                <div class="rate-tabs-section col-sm-6 col-lg-3">
                     <div class="rate-tabs bg-white">
                         <h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Бизнес</h3>
                         <p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Автомобили Бизнес класса</p>
