--- a/app/taxi-guest.html
+++ b/app/taxi-guest.html
@@ -56,7 +56,7 @@
                     <br> Заказывая такси у нас, Вы можете рассчитывать <br> на высокий уровень сервиса!</p>
             </div>
             <div class="rate-block row d-flex justify-content-center align-items-center mt-5">
-                <div class="rate-tabs-section col-lg-3">
+                <div class="rate-tabs-section col-sm-6 col-lg-3">
                     <div class="rate-tabs bg-white">
                         <h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Эконом</h3>
                         <p class="rate-subtitle text-dark text-center fs18 mt-2 mb-0 pb-md-4">Автомобили Эконом класса</p>
@@ -70,7 +70,7 @@
                         <button class="btn btn-orange py-4 w-100">Заказать</button>
                     </div>
                 </div>
-                <div class="rate-tabs-section col-lg-3">
+                <div class="rate-tabs-section col-sm-6 col-lg-3">
                     <div class="rate-tabs bg-white">
                         <h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Комфорт</h3>
                         <p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Автомобили Комфорт класса</p>
@@ -84,7 +84,7 @@
                         <button class="btn btn-orange py-4 w-100">Заказать</button>
                     </div>
                 </div>
-                <div class="rate-tabs-section col-lg-3">
+                <div class="rate-tabs-section col-sm-6 col-lg-3">
                     <div class="rate-tabs bg-white">
                         <h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Бизнес</h3>
                         <p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Автомобили Бизнес класса</p>
