ещё правки богу правок

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,11 @@
 					<li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
 				</ul>
 				<!-- Телефон -->
-				<div class="phone d-flex flex-column align-items-center align-items-lg-end col-4">
+				<div class="phone d-flex flex-column align-items-center align-items-lg-end col-auto col-4">
 					<a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
 					<p class="mb-0 fs18 text-center text-lg-right">по Новгороду и области</p>
 				</div>
-				<div class="mobile col-4">
+				<div class="mobile col-auto">
 					<a href="#my-menu" class="d-flex d-lg-none justify-content-end"><img src="img/burger-icon.svg" alt=""></a>
 				</div>
 			</div>
